@@ -1,4 +1,10 @@
 2006-09-05  Richard Ferguson <ubuntu@fergusnet.com>
+	
+    * olive/frontend/gtk/launch.py: new file to assist in launching files
+    * olive/frontend/gtk/handler.py: use new launch functions
+    * olive/frontend/gtk/menu.py: use new launch functions
+
+2006-09-05  Richard Ferguson <ubuntu@fergusnet.com>
 
     * cmenu.ui: add Open to right context menu
     * olive/frontend/gtk/menu.py: add Open file handler
